@@ -70,18 +70,15 @@ namespace Rcpp {
         return grow(Rf_mkString(head), y);
     }
 
-    #if defined(HAS_VARIADIC_TEMPLATES)
-        template <typename T1>
-        SEXP pairlist(const T1& t1) {
-            return grow( t1, R_NilValue ) ;
-        }
-        template <typename T, typename... TArgs>
-        SEXP pairlist(const T& t1, const TArgs&... args) {
-            return grow(t1, pairlist(args...));
-        }
-    #else
-        #include <Rcpp/generated/grow__pairlist.h>
-    #endif
+    template <typename T1>
+    SEXP pairlist(const T1& t1) {
+        return grow( t1, R_NilValue ) ;
+    }
+
+    template <typename T, typename... TArgs>
+    SEXP pairlist(const T& t1, const TArgs&... args) {
+        return grow(t1, pairlist(args...));
+    }
 
 } // namespace Rcpp
 
